package model;

public enum CategoriaSeña {
    LETRA,
    NUMERO,
    PALABRA,
    FRASE
}